Include config parameters for http basic auth

--- a/templates/chartmuseum_config.j2
+++ b/templates/chartmuseum_config.j2
@@ -7,4 +7,7 @@ cache.store: {{ chartmuseum_cache_store }}
 cache.redis.addr: {{ chartmuseum_cache_redis_addr }}
 cache.redis.password: {{ chartmuseum_cache_redis_password }}
 cache.redis.db: {{ chartmuseum_cache_redis_db }}
+basicauth.user: {{ chartmuseum_basicauth_user }}
+basicauth.pass: {{ chartmuseum_basicauth_password }}
+authanonymousget: {{ chartmuseum_basicauth_anonymousget }}
 
